--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
     }
 
     .tab-container {
+      text-align: right;
       position: absolute;
       top: 50%;
-      right: -10px;
+      right: -70px;
       transform: translateY(-50%);
       display: flex;
       flex-direction: column;
