made overflow visible for tabs

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       border-radius: var(--radius);
       transform-style: preserve-3d;
       transition: transform 600ms ease;
-      overflow: hidden;
+      overflow: visible;
     }
 
     .page {
