--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
       },
       blog: {
         left: '<h1>Blog</h1><p>Casual thoughts, devlogs, pixel dreams. I design custom posts per entry.</p>',
-        right: '<h2>Recent Posts</h2><ul><li>Why I Love Broken UIs</li><li>Scrapbook Your Portfolio</li><li>Looping Effect in AI</li></ul>'
+        right: '<h2>Recent Posts</h2>'
       },
       guestbook: {
         left: '<h1>Guestbook</h1><p>Leave a message! I’ll read it like a handwritten note passed in class.</p>',
