--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         right: '<h2>Recent Posts</h2>'
       },
       guestbook: {
-        left: '<h1>Guestbook</h1><p>Leave a message! I’ll read it like a handwritten note passed in class.</p>',
+        left: '<h1>Guestbook</h1><p>Leave a message! I’ll read it like a handwritten note passed in class, which I probably am in right now.</p>',
         right: '<form><label>Name<br><input type="text" /></label><br><label>Message<br><textarea rows="5"></textarea></label><br><button type="submit">Sign</button></form>'
       },
     };
